crates/ars-components/src/specialized/qr_code/snapshots/ars_components__specialized__qr_code__tests__qr_code_overlay_with_src.snap
---
source: crates/ars-components/src/specialized/qr_code/mod.rs
expression: "snapshot_attrs(&api(&props, None).overlay_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "overlay",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "qr-code",
            ),
        ),
        (
            Src,
            String(
                "/logo.png",
            ),
        ),
    ],
    styles: [],
}
