crates/ars-components/src/specialized/qr_code/snapshots/ars_components__specialized__qr_code__tests__qr_code_pattern_url.snap
---
source: crates/ars-components/src/specialized/qr_code/mod.rs
expression: "snapshot_attrs(&api(&props, None).pattern_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "pattern",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "qr-code",
            ),
        ),
        (
            Aria(
                Label,
            ),
            String(
                "QR code linking to https://example.com",
            ),
        ),
        (
            Role,
            String(
                "img",
            ),
        ),
    ],
    styles: [],
}
