crates/ars-components/src/specialized/qr_code/snapshots/ars_components__specialized__qr_code__tests__qr_code_root_no_matrix.snap
---
source: crates/ars-components/src/specialized/qr_code/mod.rs
expression: "snapshot_attrs(&api(&props, None).root_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "root",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "qr-code",
            ),
        ),
    ],
    styles: [
        (
            Width,
            "0px",
        ),
        (
            Height,
            "0px",
        ),
    ],
}
