crates/ars-components/src/specialized/qr_code/snapshots/ars_components__specialized__qr_code__tests__qr_code_root_url_with_id.snap
---
source: crates/ars-components/src/specialized/qr_code/mod.rs
expression: "snapshot_attrs(&api(&props, Some(sample_matrix())).root_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "root",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "qr-code",
            ),
        ),
        (
            Aria(
                Label,
            ),
            String(
                "QR code linking to https://example.com",
            ),
        ),
        (
            Id,
            String(
                "qr-1",
            ),
        ),
        (
            Role,
            String(
                "img",
            ),
        ),
    ],
    styles: [
        (
            Width,
            "56px",
        ),
        (
            Height,
            "56px",
        ),
    ],
}
